--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -2,6 +2,6 @@
 <resources>
     <string name="app_name">AmpiPalmDriver</string>
     <string name="title_activity_main">AmpiPalmDriver</string>
-    <string name="package_name">com.test.driver</string>
-    <string name="custom_url_scheme">com.test.driver</string>
+    <string name="package_name">com.driver.test</string>
+    <string name="custom_url_scheme">com.driver.test</string>
 </resources>
